añadidos ejercicios objetos nativos completo

--- a/ENTORNO - CLIENTE/JAVASCRIPT/ACTIVIDADES OBJETOS NATIVOS/actividad4.html
+++ b/ENTORNO - CLIENTE/JAVASCRIPT/ACTIVIDADES OBJETOS NATIVOS/actividad4.html
@@ -13,7 +13,14 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
+        <div>
+            <h2>Ejemplo del objeto Navigator</h2>
+        </div>
+        <div">
+             <input type ="button" value="Mostrar información" id="boton">
+             <ul id="datos"></ul>
+         </div>
         
-        <script src="actividad4.html" async defer></script>
+        <script src="actividad4.js" async defer></script>
     </body>
 </html>
