--- a/ENTORNO - CLIENTE/JAVASCRIPT/ACTIVIDADES OBJETOS NATIVOS/actividad5.html
+++ b/ENTORNO - CLIENTE/JAVASCRIPT/ACTIVIDADES OBJETOS NATIVOS/actividad5.html
@@ -9,6 +9,13 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
+        <div>
+            <h2>Ejemplo del objeto Screen</h2>
+        </div>
+        <div">
+             <input type ="button" value="Mostrar información" id="boton">
+             <ul id="datos"></ul>
+         </div>
         
         <script src="actividad5.js" async defer></script>
     </body>
