--- a/ENTORNO - CLIENTE/JAVASCRIPT/ACTIVIDADES OBJETOS NATIVOS/actividad6/actividad6b.html
+++ b/ENTORNO - CLIENTE/JAVASCRIPT/ACTIVIDADES OBJETOS NATIVOS/actividad6/actividad6b.html
@@ -22,7 +22,12 @@
             <button><a href="actividad6a.html">Página A</a></button> 
             <button><a href="actividad6c.html">Página C</a></button>
         </div>
+        <div id="historial">
+            <button id="back">Atrás</button>
+            <button id="next">Adelante</button>
+            <button id = "len">Historial</button>
+        </div>
         
-        <script src="" async defer></script>
+        <script src="actividad6.js" async defer></script>
     </body>
 </html>
